--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ transactions/transactions_preprocessed.csv
 .idea/vcs.xml
 .idea/.name
 transactions/transactions.txt
+base_features.pkl
+agg_features.pkl
+data_after_agg.pkl
+data_b4_agg.pkl
